--- a/index.html
+++ b/index.html
@@ -2,22 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
+    <title>Pretty Date</title>
   </head>
   <body>
-    <div class="tooltip">
-      Date
-      <div class="tooltiptext">Today</div>
-    </div>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
-  <script src="index.js"></script>
-
-  <script type="module">
-    import { fromNow } from "./index.js";
-
-    const date = Date.now() - 1;
-    console.log(fromNow(date));
-  </script>
 </html>
